fix: :lipstick: fix scrollbars on invintory tabs on small desktop devices

--- a/public/resources/scss/index.scss
+++ b/public/resources/scss/index.scss
@@ -2349,7 +2349,8 @@ a.additional-player-stat:hover {
             position: relative;
             width: 100%;
             height: 100%;
-            overflow-y: auto;
+            overflow-x: auto;
+            overflow-y: hidden;
             padding-bottom: 4px;
 
             .inventory-tab {
